--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ssh": "ssh connorjamesallen@5.183.9.243"
   },
   "dependencies": {
+    "googleapis": "^84.0.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
