--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
+    "@types/fabric": "^4.5.1",
     "@types/lodash": "^4.14.172",
+    "fabric": "^4.5.1",
     "googleapis": "^84.0.0",
     "lodash": "^4.17.21",
     "next": "11.1.0",
