--- a/package.json
+++ b/package.json
@@ -3,25 +3,31 @@
   "version": "0.1.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "socket-dev": "cd socket-server && npm run dev",
+    "dev": "concurrently \"next dev\" \"npm run socket-dev\" ",
     "build": "next build",
     "start": "next start -p 8000",
     "lint": "next lint",
     "ssh": "ssh connorjamesallen@5.183.9.243",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash next-deploy.sh"
   },
   "dependencies": {
-    "@types/fabric": "^4.5.1",
-    "@types/lodash": "^4.14.172",
-    "fabric": "^4.5.1",
     "googleapis": "^84.0.0",
+    "konva": "^8.1.3",
     "lodash": "^4.17.21",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-konva": "^17.0.2-5",
+    "socket.io-client": "^4.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/react": "17.0.18",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^8.3.1",
+    "concurrently": "^6.2.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
