--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
     "deploy": "bash next-deploy.sh"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.4",
     "googleapis": "^84.0.0",
     "konva": "^8.1.3",
     "lodash": "^4.17.21",
     "next": "11.1.0",
+    "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-konva": "^17.0.2-5",
     "socket.io-client": "^4.1.3",
+    "twilio": "^3.67.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/react": "17.0.18",
     "@types/socket.io-client": "^3.0.0",
+    "@types/twilio": "^3.19.3",
     "@types/uuid": "^8.3.1",
     "concurrently": "^6.2.1",
     "eslint": "7.32.0",
