--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-konva": "^17.0.2-5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "socket.io-client": "^4.1.3",
     "twilio": "^3.67.2",
     "uuid": "^8.3.2"
