--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^84.0.0",
     "konva": "^8.1.3",
     "lodash": "^4.17.21",
+    "mailgun-js": "^0.22.0",
     "next": "11.1.0",
     "nodemailer": "^6.6.3",
     "react": "17.0.2",
@@ -30,6 +31,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.173",
+    "@types/mailgun-js": "^0.22.12",
     "@types/next": "^9.0.0",
     "@types/react": "17.0.18",
     "@types/socket.io-client": "^3.0.0",
