--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -18,8 +18,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "konva": "^8.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.2",
     "socket.io": "^4.1.3",
