--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "private": true,
   "scripts": {
     "socket-dev": "cd socket-server && npm run dev",
-    "get-pid": "lsof -i tcp:8000",
-    "get-pid-dev": "lsof -i tcp:3000",
+    "kill-process": "kill $(lsof -i tcp:8000 | awk '/node/ {print $2}')",
+    "kill-process-dev": "kill $(lsof -i tcp:3000 | awk '/node/ {print $2}')",
     "dev": "concurrently \"next dev\" \"npm run socket-dev\" ",
-    "build": "next build",
-    "start": "next start -p 8000 >> ./logs.txt 2>&1 & disown",
+    "build": "rm -rf ./.next && next build",
+    "start": "mkdir -p ../logs/cja-site && next start -p 8000 > ../logs/cja-site/$(date +%F)-$(date +%T)-logs.txt 2>&1",
     "lint": "next lint",
     "ssh": "ssh connorjamesallen@5.183.9.243",
-    "deploy": "bash next-deploy.sh"
+    "deploy": " npm run build && bash next-deploy.sh"
   },
   "dependencies": {
-    "@types/nodemailer": "^6.4.4",
     "googleapis": "^84.0.0",
     "konva": "^8.1.3",
-    "lodash": "^4.17.21",
     "mailgun-js": "^0.22.0",
-    "next": "11.1.0",
-    "nodemailer": "^6.6.3",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-konva": "^17.0.2-5",
@@ -34,6 +31,7 @@
     "@types/lodash": "^4.14.173",
     "@types/mailgun-js": "^0.22.12",
     "@types/next": "^9.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.18",
     "@types/socket.io-client": "^3.0.0",
     "@types/twilio": "^3.19.3",
